tests222/tests2/test339.out
lli: <stdin>:1:1: error: expected top-level entity
line 5: variable falseand is not defined
^
